[package]
name = "gestetner"
version = "0.1.0"
authors = ["Richard Bradfield <bradfier@fstab.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.4.1"
rand = "0.8.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"
rouille = "3.1.1"

[profile.release]
lto = true
